--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cole",
-  "homepage": "https://Jeremara.github.io/CoLE",
+  "homepage": "https://Jeremara.github.io/cole",
   "private": true,
   "version": "0.0.0",
   "type": "module",
